デモ用ノートブックの追加

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,9 @@ dev = [
     "pytest-cov>=7.0.0",
     "ruff>=0.14.8",
 ]
+
+[dependency-groups]
+dev = [
+    "ipykernel>=7.1.0",
+    "matplotlib-fontja>=1.1.0",
+]
